--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,32 @@
-# Frontend (React Native)
-frontend/node_modules/
-frontend/.expo/
-frontend/.npm
-frontend/android/.gradle/
-frontend/android/app/build/
-frontend/android/build/
-frontend/ios/build/
-frontend/ios/Pods/
-frontend/*.log
+# Node
+node_modules/
+
+# Expo
+.expo/npx create-expo-app@latest
+dist/
+web-build/
+
+# Native builds (only appear if you prebuild/run native)
+ios/
+android/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+*.log
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# macOS / OS
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Environment
-.env
-.env.local
-.env.*.local
-
-# Database
-*.db
-*.sqlite3
