--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,6 +3,10 @@ FROM python:3.11-slim
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Create a non-root user
+RUN addgroup --system appgroup \
+    && adduser --system --ingroup appgroup appuser
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -10,6 +14,11 @@ RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
 
 COPY app/ app/
+
+# Give ownership to the non-root user
+RUN chown -R appuser:appgroup /app
+
+USER appuser
 
 EXPOSE 8000
 
