make ci run on tags

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -3,6 +3,8 @@ name: SonarCloud Analysis
 on:
   push:
     branches: ["main", "dev"]
+    tags:
+      - "v*"
   pull_request:
     branches: ["main", "dev"]
 
