--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -21,14 +21,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      # add backend folder when we have it
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@689fb39b34b9aa95ebc5f8f119343ddd51542402
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
-            -Dsonar.organization=elif5446
-            -Dsonar.projectKey=elif5446_S390_404-Name-not-Found
-            -Dsonar.sources=frontend
+            -Dsonar.organization=${{ secrets.SONAR_ORG }}
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+            -Dsonar.sources=frontend, backend
             -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
