no dev analysis blocker

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,11 +2,11 @@ name: SonarCloud Analysis
 
 on:
   push:
-    branches: ["main", "dev"]
+    branches: ["main"]
     tags:
       - "v*"
   pull_request:
-    branches: ["main", "dev"]
+    branches: ["main"]
 
 permissions:
   contents: read
