--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -2,11 +2,11 @@ name: SonarCloud Analysis
 
 on:
   push:
-    branches: ["main", "dev"]
+    branches: ["main"]
     tags:
       - "v*"
   pull_request:
-    branches: ["main", "dev"]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -20,14 +20,37 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      # Node deps for frontend path
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: npm
+          cache-dependency-path: |
+            frontend/conuwalks/package-lock.json
+
+      - name: Install frontend deps
+        working-directory: frontend/conuwalks
+        run: npm ci
+
+      # debug to confirm tsconfig path exists
+      - name: Debug tsconfig presence
+        run: |
+          ls -la frontend/conuwalks
+          ls -la frontend/conuwalks/tsconfig*.json || true
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@689fb39b34b9aa95ebc5f8f119343ddd51542402
+        uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
             -Dsonar.organization=${{ secrets.SONAR_ORG }}
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
-            -Dsonar.sources=frontend, backend
+            -Dsonar.sources=frontend,backend
             -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
