added automatic sonarcloud run from nightly-sync

--- a/.github/workflows/nightly-sync.yml
+++ b/.github/workflows/nightly-sync.yml
@@ -126,3 +126,10 @@ jobs:
 
           git tag "$next"
           git push origin "$next"
+
+      - name: Trigger SonarCloud analysis
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.repository }}
+        run: |
+          gh workflow run "SonarCloud Analysis" --repo "$REPO" --ref main
