--- a/.github/workflows/major-release.yml
+++ b/.github/workflows/major-release.yml
@@ -47,3 +47,11 @@ jobs:
           git pull origin main
           git tag "${{ steps.ver.outputs.next_tag }}"
           git push origin "${{ steps.ver.outputs.next_tag }}"
+
+      - name: Create a GitHub Release
+        uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b
+        with:
+          tag: ${{ steps.ver.outputs.next_tag }}
+          name: Release ${{ steps.ver.outputs.next_tag }}
+          generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
