--- a/.github/workflows/maestro.yml
+++ b/.github/workflows/maestro.yml
@@ -12,6 +12,9 @@ permissions:
   actions: read
   checks: write
 
+env:
+  IPHONE_VERSION: "iPhone 16"
+
 jobs:
   maestro-ios-test:
     runs-on: macos-latest
@@ -38,16 +41,75 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+      
+      - name: Setup Xcode
+        uses: maxim-lobanov/setup-xcode@60606e260d2fc5762a71e64e74b2174e8ea3c8bd
+        with:
+          xcode-version: 'latest-stable'
+
+      - name: Install Dependencies
+        working-directory: frontend/conuwalks
+        run: npm ci
+
+      # Caching CocoaPods is essential for build speed
+      - name: Cache CocoaPods
+        uses: actions/cache@v4
+        with:
+          path: frontend/conuwalks/ios/Pods
+          key: ${{ runner.os }}-pods-${{ hashFiles('frontend/conuwalks/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
+
+      # Generates the 'ios' folder for the build
+      - name: Expo Prebuild
+        working-directory: frontend/conuwalks
+        run: npx expo prebuild --platform ios --clean
+
+      # Builds the binary for the Simulator (x86_64/arm64)
+      - name: Build iOS App
+        working-directory: frontend/conuwalks
+        run: |
+          # Find the workspace name automatically (e.g., MyApp.xcworkspace)
+          WORKSPACE=$(find ios -name "*.xcworkspace" | head -n 1)
+          SCHEME=$(basename "$WORKSPACE" .xcworkspace)
+          
+          echo "Building Scheme: $SCHEME from Workspace: $WORKSPACE"
+          
+          xcodebuild \
+            -workspace "$WORKSPACE" \
+            -scheme "$SCHEME" \
+            -destination "platform=iOS Simulator,name=${{env.IPHONE_VERSION}},OS=latest" \
+            -configuration Debug \
+            -derivedDataPath build/ \
+            -quiet \
+            clean build
 
       - name: Boot iOS Simulator
         uses: futureware-tech/simulator-action@dab10d813144ef59b48d401cd95da151222ef8cd
         with:
-          model: 'iPhone 16'
+          model: ${{env.IPHONE_VERSION}}
           erase_before_boot: true
           shutdown_after_job: true
 
-      - name: maestro-test-action
-        uses: dniHze/maestro-test-action@bda8a93211c86d0a05b7a4597c5ad134566fbde4
-        with:
-          flow: .maestro
-          report: meastro-ios-report.xml
+      - name: Install Maestro CLI
+        run: |
+          curl -Ls "https://get.maestro.mobile.dev" | bash
+          echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+
+      - name: Run Maestro Tests
+        working-directory: frontend/conuwalks
+        run: |
+          export PATH="$HOME/.maestro/bin:$PATH"
+
+          APP_PATH=$(find build/Build/Products/Debug-iphonesimulator -name "*.app" | head -n 1)
+          if [ -z "$APP_PATH" ]; then
+            echo "Error: .app binary not found. Build may have failed."
+            exit 1
+          fi
+          
+          echo "Testing Binary: $APP_PATH"
+
+          maestro test .maestro \
+            --app-file "$APP_PATH" \
+            --format junit \
+            --output maestro-ios-report.xml
