--- a/.github/workflows/nightly-sync.yml
+++ b/.github/workflows/nightly-sync.yml
@@ -62,6 +62,7 @@ jobs:
           existing="$(gh pr list --base main --head dev --state open --json number -q '.[0].number')"
           if [ -n "$existing" ]; then
             echo "PR already exists: $existing"
+            echo "number=$existing" >> "$GITHUB_OUTPUT"
             exit 0
           fi
 
@@ -121,6 +122,7 @@ jobs:
           fi
 
       - name: Tag nightly version v0.x.0
+        if: steps.guard.outputs.should_merge == 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
