--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -45,6 +45,10 @@ jobs:
           ls -la frontend/conuwalks
           ls -la frontend/conuwalks/tsconfig*.json || true
 
+      - name: Run Jest with coverage
+        working-directory: frontend/conuwalks
+        run: npm test -- --coverage
+        
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9
         env:
