--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -59,3 +59,7 @@ jobs:
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.sources=frontend
             -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/build/**
+            -Dsonar.tests=frontend/conuwalks/src
+            -Dsonar.test.inclusions=frontend/conuwalks/src/**/*.test.ts,frontend/conuwalks/src/**/*.test.tsx
+            -Dsonar.javascript.lcov.reportPaths=frontend/conuwalks/coverage/lcov.info
+            -Dsonar.typescript.lcov.reportPaths=frontend/conuwalks/coverage/lcov.info
